--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ img {
   left: 0;
   width: 100%;
   height: 600px;
-  background-image: url('/Users/abebemhmh/Desktop/ポートフォリオ/logaster_No_1_small_size_108x73_pixels_(PNG)/haikei.jpg');
+  background-image: url('https://i.pinimg.com/originals/c9/9d/3a/c99d3aaa0d044b614f030e51643eceec.jpg');
   background-position: center;
   background-size: cover;
   transition: all 0.1s ease 0s;
