--- a/style.css
+++ b/style.css
@@ -269,10 +269,19 @@ footer p {
 }
 
 .maincontents {
- display: inline-block;
- background-color: black;
+ display: inline;
  width: auto;
- height: 350px;
  margin: 20px;
- float: right;
+ position: absolute;
+ font-size: 20px;
+}
+
+.gyazo {
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+}
+
+.link {
+  text-decoration: none;
 }
