--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ footer p {
 .smallbox {
   background-color: black;
   height: auto;
-  width: 260px;
+  width: 160px;
   margin: 20px;
   display: inline-block;
 }
@@ -271,14 +271,17 @@ footer p {
 .maincontents {
  display: inline;
  width: auto;
+ max-width: 100%;
+ height: auto;
  margin: 20px;
  position: absolute;
- font-size: 20px;
+ /* font-size: 20px; */
 }
 
 .gyazo {
   width: 100%;
-  height: 250px;
+  max-width: 100%;
+  height: auto;
   object-fit: contain;
 }
 
