--- a/style.css
+++ b/style.css
@@ -148,12 +148,13 @@ img {
 .box {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: auto;
   background-color: white;
   margin: 10px 0px 30px 0px;
   border-bottom: 30px rgb(59, 41, 65);
   -webkit-box-shadow: 0px 0px 2px 2px #ccc;
   box-shadow: 0px 0px 2px 2px #ccc;
+  overflow: scroll;
 }
 footer {
   position: relative;
